syntax = "proto3";

package books;

option go_package = "/books";

service Books {
  rpc GetVolumes(Params) returns (Volumes) {}
  rpc GetVolume(Params) returns (Volume) {}
}

message Params {
  string q = 1;
  string lang = 2;
  string orderBy = 3;
  int32 startIndex = 4;
  int32 maxResults = 5;
}

message Volumes {
  repeated Volume items = 1;
  int32 total = 2;
}

message Volume {
  string id = 1;

  string title = 2;
  string description = 3;

  string mainCategory = 4;
  repeated string categories = 5;

  repeated string authors = 6;
  string publishedDate = 7;
  string publisher = 8;

  float averageRating = 9;
  int64 ratingsCount = 10;
 
  int32 pageCount = 11;
  ImageLinks imageLinks = 12;
}

message ImageLinks {
  string extraLarge = 1;
  string large = 2;
  string medium = 3;
  string small = 4;
  string smallThumbnail = 5;
  string thumbnail = 6;
}